--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,12 +113,15 @@ MRUItem1=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainMenu.BPW_MainMenu
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Buttons.BPW_Buttons
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_ConfirmationScreen.BPW_ConfirmationScreen
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Credits.BPW_Credits
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameOver.BPW_GameOver
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Leaderboard.BPW_Leaderboard
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2679,6 +2682,87 @@ BPW_GameOver_C.Performance=True
 BPW_GameOver_C.Clipping=True
 BPW_GameOver_C.Navigation=True
 BPW_GameOver_C.Layout=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+UniformGridPanel.Layout=True
+UniformGridPanel.Child Layout=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Render Transform=True
+UniformGridPanel.Performance=True
+UniformGridPanel.Clipping=True
+UniformGridPanel.Navigation=True
+BPW_ConfirmationScreen_C.Appearance=True
+BPW_ConfirmationScreen_C.Designer=True
+BPW_ConfirmationScreen_C.Input=True
+BPW_ConfirmationScreen_C.Interaction=True
+BPW_ConfirmationScreen_C.Performance=True
+BPW_ConfirmationScreen_C.Layout=True
+BPW_ConfirmationScreen_C.Behavior=True
+BPW_ConfirmationScreen_C.Render Transform=True
+BPW_ConfirmationScreen_C.Clipping=True
+BPW_ConfirmationScreen_C.Navigation=True
+TextProperty.Variable=True
+TextProperty.DefaultValueCategory=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
+BPW_MainSettings_C.Default=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Events=True
+BP_EnemyNormalNew_C.Default=True
+BP_EnemyNormalNew_C.Tick=True
+BP_EnemyNormalNew_C.Character=True
+BP_EnemyNormalNew_C.Camera=True
+BP_EnemyNormalNew_C.Pawn=True
+BP_EnemyNormalNew_C.Rendering=True
+BP_EnemyNormalNew_C.Replication=True
+BP_EnemyNormalNew_C.Input=True
+BP_EnemyNormalNew_C.Actor=True
+BPW_Credits_C.Default=True
+BPW_Credits_C.Appearance=True
+BPW_Credits_C.Designer=True
+BPW_Credits_C.Input=True
+BPW_Credits_C.Interaction=True
+BPW_Credits_C.Performance=True
+BPW_Credits_C.Layout=True
+BPW_Credits_C.Behavior=True
+BPW_Credits_C.Render Transform=True
+BPW_Credits_C.Clipping=True
+BPW_Credits_C.Navigation=True
+REINST_BP_EnemyNormal_C_403.None=True
+REINST_BP_EnemyNormal_C_403.Tick=True
+REINST_BP_EnemyNormal_C_403.Character=True
+REINST_BP_EnemyNormal_C_403.Camera=True
+REINST_BP_EnemyNormal_C_403.Pawn=True
+REINST_BP_EnemyNormal_C_403.Rendering=True
+REINST_BP_EnemyNormal_C_403.Replication=True
+REINST_BP_EnemyNormal_C_403.Input=True
+REINST_BP_EnemyNormal_C_403.Actor=True
+BPW_GameOver_C.Designer=True
+BPW_GameOver_C.Default=True
+BPW_ConfirmationScreen_C.Events=True
+BPW_Leaderboard_C.Appearance=True
+BPW_Leaderboard_C.Designer=True
+BPW_Leaderboard_C.Input=True
+BPW_Leaderboard_C.Interaction=True
+BPW_Leaderboard_C.Performance=True
+BPW_Leaderboard_C.Layout=True
+BPW_Leaderboard_C.Behavior=True
+BPW_Leaderboard_C.Render Transform=True
+BPW_Leaderboard_C.Clipping=True
+BPW_Leaderboard_C.Navigation=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=64.000
@@ -2731,7 +2815,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2753,10 +2837,10 @@ UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer
 IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransform\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
@@ -2782,17 +2866,17 @@ Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Objec
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 BP_EnemyDefault_C=
 BP_EnemyBoss_C=
 BP_EnemyNormal_C=
 REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
 REINST_BP_EnemyBoss_C_440="\"Object.Default.ActivePanels\" "
-ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModule="\"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
@@ -2817,7 +2901,7 @@ BPW_Hearts_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.Re
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_EnemySmall_C=
 BPW_Buttons_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-BPW_GameWindow_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+BPW_GameWindow_C=
 ParticleModuleAccelerationDrag="\"Object.Drag.DragCoefficientRaw.Distribution\" "
 ParticleModuleAccelerationBase="\"Object.Acceleration.AccelOverLife.Distribution\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[2]\" "
 ParticleModuleColorScaleOverLife="\"Object.Color.ColorScaleOverLife.Distribution\" \"Object.Color.AlphaScaleOverLife\" \"Object.Color.AlphaScaleOverLife.Distribution\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
@@ -2839,7 +2923,12 @@ ScaleBox="\"Object.Render Transform.RenderTransform\" "
 BPW_MainSettings_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 BPW_GameOver_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
+UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
+BPW_ConfirmationScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetBarStyle\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+BPW_Credits_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+BPW_Leaderboard_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [Directories2]
 UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
@@ -3559,7 +3648,7 @@ K2Node_VariableGet=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValue
 ObjectProperty=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 IntProperty=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BP_GameLogic_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BP_Saver_C=BP_EnemyBase_C.Collision.Collision,
+BP_Saver_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BoolProperty=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 FloatProperty=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -3583,28 +3672,32 @@ SceneComponent=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCate
 BP_SwitcherBox_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BPW_MainMenu_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BPW_MainSettings_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_ConfirmationScreen_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_Credits_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_GameOver_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_Leaderboard_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/BPW_Buttons
-MRUItem1=/Game/Blueprints/Widgets/BPW_MainSettings
-MRUItem2=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem3=/Game/Blueprints/Widgets/BPW_MainMenu
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Blueprints/Widgets/BPW_GameOver
-MRUItem6=/Game/Textures/GUI/Test/ButtonWoodBlock
-MRUItem7=/Game/Blueprints/Widgets/BPW_MenuItem
-MRUItem8=/Game/Levels/TestMap_01
-MRUItem9=/Game/Particles/P_Explosion
-MRUItem10=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01
-MRUItem11=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem12=/Game/VFX_Toolkit_V1/Materials/356Days/M_bubbleBeam_01
-MRUItem13=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem14=/Game/VFX_Toolkit_V1/MatInstances/356Days/MI_bubbleBeam_01
-MRUItem15=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_MissileTrails
-MRUItem16=/Game/VFX_Toolkit_V1/Materials/356Days/M_BubbleBall_01
-MRUItem17=/Game/Blueprints/Logic/BP_SwitcherBox
-MRUItem18=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem19=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem0=/Game/Blueprints/Widgets/BPW_Leaderboard
+MRUItem1=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem2=/Game/Blueprints/Widgets/BPW_GameOver
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Blueprints/Logic/BP_SwitcherBox
+MRUItem5=/Game/Levels/TestMap_01
+MRUItem6=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem7=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem8=/Game/Particles/P_TorchFlames
+MRUItem9=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem10=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem11=/Game/Blueprints/Enemies/BP_EnemyNormalNew
+MRUItem12=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem13=/Game/Blueprints/Widgets/BPW_Credits
+MRUItem14=/Game/Blueprints/Widgets/BPW_ConfirmationScreen
+MRUItem15=/Game/Blueprints/Widgets/BPW_MainSettings
+MRUItem16=/Game/Blueprints/Widgets/BPW_MainMenu
+MRUItem17=/Game/Blueprints/Widgets/BPW_Buttons
+MRUItem18=/Game/Textures/GUI/Test/ButtonWoodBlock
+MRUItem19=/Game/Blueprints/Widgets/BPW_MenuItem
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01.Par_BubblePop_01;
@@ -3650,6 +3743,10 @@ RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault;
 /Game/Textures/GUI/Test/ButtonWoodBlock.ButtonWoodBlock=0
 /Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings=0
 /Game/Blueprints/Widgets/BPW_MenuItem.BPW_MenuItem=0
+/Game/Blueprints/Enemies/BP_EnemyNormalNew.BP_EnemyNormalNew=0
+/Game/Blueprints/Logic/BP_SwitcherBox.BP_SwitcherBox=0
+/Game/Particles/P_TorchFlames.P_TorchFlames=0
+/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot=0
 
 [MaterialEditor]
 PrimType=1
@@ -3721,6 +3818,7 @@ PreviewMaterial.Material=True
 TextBlock.Appearance=True
 TextBlock.Performance=False
 TextBlock.Wrapping=False
+PaperSpriteComponent.Collision=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
